added global variables in header file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "operations.h": "c"
+        "operations.h": "c",
+        "string.h": "c",
+        "structs.h": "c"
     }
 }
